[project]
name = "qwen3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chainlit>=2.9.0",
    "nbformat>=5.10.4",
    "numpy==1.26.4",
    "pytest>=9.0.1",
    "tokenizers==0.21.4",
    "torch==2.1.0",
    "transformers==4.51.0",
]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"
