[project]
name = "qwen3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chainlit>=2.9.0",
    "nbformat>=5.10.4",
    "onnx==1.18.0",
    "pytest>=9.0.1",
    "tokenizers==0.21.4",
    "torch==2.1.0",
    "transformers==4.51.0",
    "numpy<2",
    "onnxruntime>=1.23.2",
    "onnxslim>=0.1.74",
    "optimum>=2.0.0",
]

